--- a/.github/workflows/render_latex.yml
+++ b/.github/workflows/render_latex.yml
@@ -10,7 +10,13 @@ jobs:
         uses: xu-cheng/latex-action@v3
         with:
           root_file: Statut_HSP.tex
+      - name: Upload PDF file
+        uses: actions/upload-artifact@v4
+        with:
+          name: PDF
+          path: Statut_HSP.pdf
       - name: Upload PDF file to Release
         uses: softprops/action-gh-release@v2
+        if: startsWith(github.ref, 'refs/tags/')
         with:
           files: Statut_HSP.pdf
